docs/0.7/_sources/api/gammapy.spectrum.models.LogParabola.rst.txt
LogParabola
===========

.. currentmodule:: gammapy.spectrum.models

.. autoclass:: LogParabola
   :show-inheritance:

   .. rubric:: Attributes Summary

   .. autosummary::

      ~LogParabola.e_peak

   .. rubric:: Methods Summary

   .. autosummary::

      ~LogParabola.__call__
      ~LogParabola.copy
      ~LogParabola.energy_flux
      ~LogParabola.energy_flux_error
      ~LogParabola.evaluate
      ~LogParabola.evaluate_error
      ~LogParabola.from_dict
      ~LogParabola.from_log10
      ~LogParabola.integral
      ~LogParabola.integral_error
      ~LogParabola.inverse
      ~LogParabola.plot
      ~LogParabola.plot_error
      ~LogParabola.spectral_index
      ~LogParabola.to_dict
      ~LogParabola.to_sherpa

   .. rubric:: Attributes Documentation

   .. autoattribute:: e_peak

   .. rubric:: Methods Documentation

   .. automethod:: __call__
   .. automethod:: copy
   .. automethod:: energy_flux
   .. automethod:: energy_flux_error
   .. automethod:: evaluate
   .. automethod:: evaluate_error
   .. automethod:: from_dict
   .. automethod:: from_log10
   .. automethod:: integral
   .. automethod:: integral_error
   .. automethod:: inverse
   .. automethod:: plot
   .. automethod:: plot_error
   .. automethod:: spectral_index
   .. automethod:: to_dict
   .. automethod:: to_sherpa
